compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__double_unary_boolean_literal.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { let _ = !!True }"
---

warning: Unnecessary double negation (!!) on boolean.
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = !!True }
  │                         ^^^^^^

Hint: You can safely remove this.

