compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__double_unary_integer_literal.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { let _ = --7 }"
---

warning: Unnecessary double negation (--) on integer
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = --7 }
  │                         ^^^

Hint: You can safely remove this.

