compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__empty_func_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { wibble() }\npub fn wibble() { }\n"
---
----- SOURCE CODE
pub fn main() { wibble() }
pub fn wibble() { }


----- WARNING
warning: Unimplemented function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ pub fn wibble() { }
  │ ^^^^^^^^^^^^^^^ This code is incomplete

A function must always have an implementation.

A todo expression has been used in place of the missing body,
so this code will crash if it is run. Be sure to finish it before
running your program.
